very basic and most likely wrong syria thingy over time

--- a/styles/network.css
+++ b/styles/network.css
@@ -29,6 +29,12 @@ body{
 	transition: all 0.2s;
 
 	cursor: pointer;
+
+	-webkit-user-select: none;  /* Chrome all / Safari all */
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;          /* Likely future */
+
 }
 #next:hover{
 	background:#444;
